# Offers-Sdk

./: .gitignore  README.md  openapi.json  pyproject.toml
.github/workflows/: python-publish.yml  python-tests.yml
demo/: demo.cast
src/: config.py  container.py  exceptions.py  main.py  models.py  offers_sdk.py
src/http_client/: base_client.py  http_client.py  requests_client.py
src/offers_cli/: __main__.py  actions.py  app.py
src/offers_cli/commands/: get_offers.py  register_product.py
src/offers_sdk/: client.py  config.py  exceptions.py  models.py
src/offers_sdk/http/: base_client.py  http_response.py  requests_client.py
src/offers_sdk/http/auth_token/: auth_token_manager.py  keyring_token_manager.py
src/offers_sdk_applifting/: client.py  exceptions.py
src/offers_sdk_applifting/http/: base_client.py  requests_client.py
src/offers_sdk_applifting/http/auth_token/: auth_token_manager.py  keyring_token_manager.py
src/questionary_cli/: __main__.py  app.py  container.py
src/questionary_cli/commands/: get_offers.py  register_product.py
test/: api_config_test.py  conftest.py  exceptions_test.py  http_client_test.py  http_response_test.py  offers_sdk_test.py  requests_client_test.py  test_api_config.py
test/offers_sdk/: api_config_test.py  auth_token_manager_test.py  exceptions_test.py  http_client_test.py  http_response_test.py  keyring_token_manager_test.py  offers_sdk_test.py  requests_client_test.py
test/questionary_cli/: sdk_integration_test.py  test_app.py  test_commands.py
