[project]
name = "offers-sdk"
version = "0.1.0"
description = "SDK for interacting with the Offers API"
authors = [
    { name = "Aryan Kumar", email = "akumm2k@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "dependency-injector>=4.48.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "result>=0.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.11",
    "isort>=7.0.0",
    "mypy>=1.19.1",
]

[tool.ruff]
line-length = 70

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
    "pass",
    "pragma: no cover",
]

[tool.mypy]
files = "src"
follow_untyped_imports = false
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[project.scripts]
offers = "questionary_cli.__main__:main"
