[project]
name = "offers-sdk"
version = "0.1.0"
description = "SDK for interacting with the Offers API"
authors = [
    { name = "Aryan Kumar", email = "akumm2k@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "dependency-injector>=4.48.3",
    "keyring>=25.7.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "result>=0.17.0",
    "rich>=14.2.0",
    "ruff>=0.14.13",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.11",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "requests-mock>=1.12.1",
]

[tool.ruff]
line-length = 70

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "--cov=src --cov-report=term-missing"
# Logging configuration
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
log_file = "logs/test.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"


[tool.coverage.run]
omit = [
    # not sure how to test the app fireup meaningfully
    "src/questionary_cli/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pass",
    "pragma: no cover",
]

[tool.mypy]
files = "src"
follow_untyped_imports = false
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[project.scripts]
offers = "questionary_cli.__main__:main"

